# coaster-nn

./: CNAME  Cargo.toml  README.md  index.html  search-index.js
coaster_nn/: LRN.t.html  LogSoftmax.t.html  Relu.t.html  enum.ConvBackwardDataAlgo.html  enum.ConvBackwardFilterAlgo.html  enum.ConvForwardAlgo.html  index.html  macro.impl_ops_log_softmax_for.html  macro.impl_ops_lrn_for.html  macro.impl_ops_relu_for.html  macro.impl_ops_sigmoid_for.html  macro.impl_ops_softmax_for.html  macro.impl_ops_tanh_for.html  sidebar-items.js  trait.Convolution.html  trait.ConvolutionConfig.html  trait.Dropout.html  trait.LRN.html  trait.LogSoftmax.html  trait.NN.html  trait.NNOperationConfig.html  trait.Pooling.html  trait.Relu.html  trait.ReluPointwise.html  trait.Sigmoid.html  trait.SigmoidPointwise.html  trait.Softmax.html  trait.Tanh.html  trait.TanhPointwise.html
coaster_nn/frameworks/: index.html
coaster_nn/frameworks/cuda/: DataTypeInfo.t.html  ICudnnDesc.t.html  index.html  sidebar-items.js  trait.DataTypeInfo.html  trait.ICudnnDesc.html
coaster_nn/frameworks/native/: index.html
coaster_nn/plugin/: ConvBackwardDataAlgo.t.html  ConvBackwardFilterAlgo.t.html  ConvForwardAlgo.t.html  ConvolutionConfig.t.html  Dropout.t.html  NN.t.html  NNOperationConfig.t.html  Pooling.t.html  ReluPointwise.t.html  Sigmoid.t.html  SigmoidPointwise.t.html  Softmax.t.html  Tanh.t.html  TanhPointwise.t.html
implementors/num_integer/: trait.Integer.js
implementors/num_traits/: trait.Num.js
src/coaster_nn/: lib.rs.html  plugin.rs.html
src/tests/: convolutional.rs  pooling.rs
(+110 files in other folders)
