[package]
name            = "collenchyma-nn"
description     = "collenchyma plugin providing Neural Network operations"
version         = "0.3.4"
authors         = ["Michael Hirn <mj@autumnai.com>",
                   "Maximilian Goisser <max@autumnai.com>"]

repository      = "https://github.com/autumnai/collenchyma-nn"
homepage        = "https://github.com/autumnai/collenchyma-nn"
documentation   = "https://autumnai.github.io/collenchyma-nn"
readme          = "README.md"

keywords        = ["neural-network", "collenchyma", "computation", "hpc", "plugin"]
license         = "MIT OR Apache-2.0"

[dependencies]
collenchyma = { git = "https://github.com/alexandermorozov/collenchyma", default-features = false }
cudnn = { git = "https://github.com/alexandermorozov/rust-cudnn", optional = true }
libc = "0.2"
lazy_static = "0.1"
log = "0.3.2"

clippy = { version = "0.0.27", optional = true }

[dev-dependencies]

rand = "0.3"

[features]
default = ["native", "cuda", "opencl"]
native = ["collenchyma/native"]
cuda = ["collenchyma/cuda", "cudnn"]
opencl = ["collenchyma/opencl"]
unstable = []

travis = ["native"]
dev = []
lint = ["clippy"]
